2007-02-24  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* marker pointer with precize graph position at zoom >1
	* fixed bug setting marker on 2D graph in 3D diagram
	* fixed bug with nan values in diagrams
	* enter wire mode when clicking on circuit node

2007-01-12  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* correct position for graph style "circles"
	* somewhat fixed shorten for digital components
	* some restructuring
	* own bitmaps for HICUM and FBH HBT
	* default graph style "arrows" for HB variables

2007-01-22  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* better resizing at zoom levels <> 1
	* better selecting at zoom levels <> 1
	* correct cursor cross before starting new wire

2006-12-22  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* new components: twisted-pair transmission line, bond wire
	* new symbol for 4-port transmission line
	* fixed bug on subcircuit parameters without description

2006-12-06  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* fixed small bug on creating paintings
	* new capacitor property: symbol neutral/polar
	* new diode property: symbol normal/Schottky/Zener
	* fixed bug in wrong scrollbar position
	* minimized flicker on scrollbar moving
	* limit diagram size to scrollbar
	* LaTeX symbols in text of schematic frame

2006-11-25  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* new symbol for ideal transmission line and coax line
	* new component: 4-port transmission line

2006-11-05  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* new main menu: Positioning
	* New actions: center horizontally and vertically
	* keep mouse position during zoom
	* move tabular scroll bar directly with mouse

2006-10-28  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* improved component/wire move algorithm
	* fixed bug in distributing paintings

2006-10-21  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>
