@@ -1,3 +1,9 @@
+2007-03-03  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>
+
+	* set marker painting precisely
+	* fixed bug in painting diagram selection frame
+	* added diode property: Ikf
+
 2007-02-24  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>
 
 	* marker pointer with precize graph position at zoom >1
